[project]
name = "elsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "minisgl",
    "nvidia-cutlass-dsl==4.2.1",
    "sglang>=0.5.6.post2",
]


[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

# [tool.uv.sources]
# minisgl = { git = "https://github.com/sgl-project/mini-sglang.git" }
